# sparsecat

./: .clang-format  .gitignore  README.md  meson.build  sparsecat_1.0.orig.tar.xz.delta  sparsecat_1.0.orig.tar.xz.id
.github/workflows/: debian.yml  meson.yml
debian/: .gitignore  changelog  control  copyright  rules  sparsecat.lintian-overrides  sparsecat.manpages
debian/tests/: control  verify
src/: main.c
